--- a/_posts/06-08-2012-code-test.md
+++ b/_posts/06-08-2012-code-test.md
@@ -4,7 +4,7 @@ layout: default
 
 here is an example with some code in it
 
-{% highlight obj-c  %}
+{% highlight objc  %}
 NSArray* array = [NSArray array];
 if (array.count > 0) {
 	NSLog(@"i is greater than 0");
