--- a/_posts/06-08-2012-code-test.md
+++ b/_posts/06-08-2012-code-test.md
@@ -4,7 +4,9 @@ layout: default
 
 here is an example with some code in it
 
-{% highlight objc  %}
+{% highlight objc %}
+#import <UIKit/UIKit.h>
+
 NSArray* array = [NSArray array];
 if (array.count > 0) {
 	NSLog(@"i is greater than 0");
