--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -5,3 +5,5 @@ published: false
 ## Symbolicating RubyMotion Crash Logs
 
 When receiving a crash log via email, use [atos](https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man1/atos.1.html). to find the line numbers in RubyMotion. Here is how.
+
+After running `rake device`, a bunch of files are created in the build directory under the build target.
