--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -8,7 +8,7 @@ When receiving a crash log via email, use [atos](https://developer.apple.com/lib
 
 After running `rake device`, a bunch of files are created in the build directory under the build target, including a `.dSYM` file. Here is an example of my `build/iPhoneOS-7.0-Development` directory: ![Imgur](http://i.imgur.com/Nas5e5N.png) Anyhow, `cd` into that directory, I'll be typing all commands from that directory.
 
-Here is the crash log I'll be using [Imgur](http://i.imgur.com/HLXbG1I)
+Here is the crash log I'll be using ![Imgur](http://i.imgur.com/HLXbG1I.png)
 
 
 
