--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -12,4 +12,8 @@ Here is the crash log I'll be using ![Imgur](http://i.imgur.com/HLXbG1I.png) ![I
 
 Here is the command I typed: `atos -l 0xed000 -arch armv7 0x00a22a30 0x00a22b56 0x0098caec 0x00a20866 0x00a0a930 0x00a09a66 0x00a0a420 0x0080b524 0x0081241e 0x008124ae -o Redacted\ \(Dev\).dSYM/Contents/Resources/DWARF/Redacted\ \(Dev\) -d`
 
-The `-l` bit
+The `-l` bit is taken from the Binary Images section. That first number there.
+
+The `-arch` is the architecture to use. Here, it's `armv7` since the crash happened on device.
+
+The rest of the hex numbers are taken from the first screen shot of the crash log. I copy/pasted them from the crash log for now (would like to hear of a better way). And I got this output:
