--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -17,3 +17,15 @@ The `-l` bit is taken from the Binary Images section. That first number there.
 The `-arch` is the architecture to use. Here, it's `armv7` since the crash happened on device.
 
 The rest of the hex numbers are taken from the first screen shot of the crash log. I copy/pasted them from the crash log for now (would like to hear of a better way). And I got this output:
+
+   got symbolicator for Redacted (Dev).dSYM/Contents/Resources/DWARF/Redacted (Dev), base address 4000
+   __vm_raise() (in Redacted (Dev)) + 276
+   rb_vm_raise (in Redacted (Dev)) + 82
+   rb_frozen_class_p (in Redacted (Dev)) + 72
+   rb_vm_method_missing (in Redacted (Dev)) + 358
+   rb_vm_dispatch (in Redacted (Dev)) + 3060
+   rb_vm_trigger_method_missing (in Redacted (Dev)) + 522
+   rb_vm_dispatch (in Redacted (Dev)) + 1764
+   vm_fast_plus (in Redacted (Dev)) + 356
+   __unnamed_28 (in Redacted (Dev)) + 274
+   rb_scope__commandDidStart:__ (in Redacted (Dev)) (login_view_controller.rb:56)
