--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -29,3 +29,5 @@ The rest of the hex numbers are taken from the first screen shot of the crash lo
     vm_fast_plus (in Redacted (Dev)) + 356
     __unnamed_28 (in Redacted (Dev)) + 274
     rb_scope__commandDidStart:__ (in Redacted (Dev)) (login_view_controller.rb:56)
+    
+As you can see, the crash was in Facebook log in code.
