--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -31,3 +31,7 @@ The rest of the hex numbers are taken from the first screen shot of the crash lo
     rb_scope__commandDidStart:__ (in Redacted (Dev)) (login_view_controller.rb:56)
     
 As you can see, the crash was in Facebook log in code.
+
+###Summary
+
+I'm not happy about having to copy/paste the addresses into the command line. But I am happy that I was able to get a line number in ruby code (although off by one) from an otherwise opaque crash log intended for Xcode.
