--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -7,7 +7,7 @@ When receiving a crash log via email, use [atos](https://developer.apple.com/lib
 
 After running `rake device`, a bunch of files are created in the build directory under the build target, including a `.dSYM` file. Go ahead and `cd` into that directory, I'll be typing all commands from that directory. Here is an example of my `build/iPhoneOS-7.0-Development` directory: ![Imgur](http://i.imgur.com/Nas5e5N.png) 
 
-Here is the crash log I'll be using ![Imgur](http://i.imgur.com/HLXbG1I.png) ![Imgur](http://i.imgur.com/vryfvTl.png)
+Here is the crash log I'll be using [Imgur](http://i.imgur.com/HLXbG1I.png) [Imgur](http://i.imgur.com/vryfvTl.png)
 
 Here is the command I typed: `atos -l 0xed000 -arch armv7 0x00a22a30 0x00a22b56 0x0098caec 0x00a20866 0x00a0a930 0x00a09a66 0x00a0a420 0x0080b524 0x0081241e 0x008124ae -o Redacted\ \(Dev\).dSYM/Contents/Resources/DWARF/Redacted\ \(Dev\) -d`
 
