--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -4,17 +4,19 @@ layout: post
 published: true
 ---
 
-Symbolicating a crash log is the process of getting a line number in source from a crash log. Crash logs can look like [this](http://i.imgur.com/HLXbG1I.png). This process is particularly interesting in RubyMotion since Apple's tools don't natively symbolicate to Ruby code. Here is how.
+Symbolicating a crash log is the process of finding a line number in source from a crash log. Crash logs often look like [this](http://i.imgur.com/HLXbG1I.png). This specific process is interesting in particular to RubyMotion because Apple's Xcode doesn't symbolicate to Ruby code. 
 
-After running `rake device`, you have a bunch of files in the build directory under the build target, including a `.dSYM` file. Go ahead and `cd` into that directory, I'll be typing all commands from that directory. Here is the directory listing of my `build/iPhoneOS-7.0-Development` directory: ![Imgur](http://i.imgur.com/Nas5e5N.png) 
+Now let's see how it's done.
 
-This is the crash log I received from our customer: [Crash Trace](http://i.imgur.com/HLXbG1I.png) [Binary Images](http://i.imgur.com/vryfvTl.png) And here is a handy guide to getting crash logs from Apple devices: [Pocket](http://help.getpocket.com/customer/portal/articles/500338-how-to-find-the-iphone-ipad-app-crash-logs)
+After running `rake device`, you have binary files in the build directory, including a `.dSYM` file. Go ahead and `cd` into that directory, I'll be typing all commands from that directory. Here is the directory listing for my `build/iPhoneOS-7.0-Development` directory: ![Imgur](http://i.imgur.com/Nas5e5N.png) 
 
-Now, use a command called [atos](https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man1/atos.1.html). You'll need the load address, the architecture, and the address from the crash log.
+A good example to use is this crash log I received from our customer: [Crash Trace](http://i.imgur.com/HLXbG1I.png) [Binary Images](http://i.imgur.com/vryfvTl.png) Another good resource is this handy guide to getting crash logs from Apple devices: [Pocket](http://help.getpocket.com/customer/portal/articles/500338-how-to-find-the-iphone-ipad-app-crash-logs)
+
+Next, we're going to use a command called [atos](https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man1/atos.1.html). You'll need the load address, the architecture, and the list of addresses from the crash log. I'll show where to get these from the crash log.
 
 Here is the command I typed based on the crash log example: `xcrun atos -l 0xed000 -arch armv7 0x00a22a30 0x00a22b56 0x0098caec 0x00a20866 0x00a0a930 0x00a09a66 0x00a0a420 0x0080b524 0x0081241e 0x008124ae -o Redacted\ \(Dev\).dSYM/Contents/Resources/DWARF/Redacted\ \(Dev\)`
 
-The `-l` bit is taken from the Binary Images section. That first number there. The `-arch` is the architecture to use. Here, it's `armv7` since the crash happened on device.
+The value for the `-l` flag is taken from the Binary Images section. That first number there. The value for the `-arch` flag is `arm7` since the binaries were built for an iOS device.
 
 The rest of the hex numbers are taken from the first screen shot of the crash log. I copy/pasted them from the crash log for now (would like to hear of a better way). And I got this output:
 
@@ -32,4 +34,4 @@ The rest of the hex numbers are taken from the first screen shot of the crash lo
     
 As you can see, the crash was in the login controller. Looking at that file, it's the Facebook log in code.
 
-I'm not happy about having to copy/paste the addresses into the command line. But I am happy that I was able to get a line number in ruby code (although off by one) from an otherwise opaque crash log intended for Xcode.
+Although having to copy/paste addresses into the command line isn't ideal, the main goal is retrieving a line number in ruby code (although off by one) from an otherwise opaque crash log intended for Xcode. And this allows further debugging.
