circles around binary image address

--- a/_posts/2013-12-04-atos.md
+++ b/_posts/2013-12-04-atos.md
@@ -10,7 +10,7 @@ Now let's see how it's done.
 
 After running `rake device`, you have binary files in the build directory, including a `.dSYM` file. Go ahead and `cd` into that directory, I'll be typing all commands from that directory. Here is the directory listing for my `build/iPhoneOS-7.0-Development` directory: ![Imgur](http://i.imgur.com/Nas5e5N.png) 
 
-A good example to use is this crash log I received from our customer: [Crash Trace](http://i.imgur.com/HLXbG1I.png) [Binary Images](http://i.imgur.com/vryfvTl.png) Another good resource is this handy guide to getting crash logs from Apple devices: [Pocket](http://help.getpocket.com/customer/portal/articles/500338-how-to-find-the-iphone-ipad-app-crash-logs)
+A good example to use is this crash log I received from our customer: [Crash Trace](http://i.imgur.com/HLXbG1I.png) [Binary Images]({{site.baseurl}}images/symbolicating-binaryimages.png) Another good resource is this handy guide to getting crash logs from Apple devices: [Pocket](http://help.getpocket.com/customer/portal/articles/500338-how-to-find-the-iphone-ipad-app-crash-logs)
 
 Next, we're going to use a command called [atos](https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man1/atos.1.html). You'll need the load address, the architecture, and the list of addresses from the crash log. I'll show where to get these from the crash log.
 
